--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "@fancyapps/fancybox": "^3.5.7",
     "animate.css": "^3.7.2",
     "bootstrap": "^4.3.1",
-    "fancybox": "^3.0.1",
     "inputmask": "^4.0.8",
     "jquery": "^3.4.1",
     "jquery-ui": "^1.12.1",
